# discord-batch-inviter

./: Cargo.toml  README.md
src/: main.rs
