[package]
name = "discord-batch-inviter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.10", features = ["derive"] }
discord = { git = "https://github.com/nicolas-siplis/discord-rs", branch = 'master' }
